(fix) source code button text wrap

--- a/src/app/showcase/pages/components/overview/components/header/header.component.scss
+++ b/src/app/showcase/pages/components/overview/components/header/header.component.scss
@@ -30,6 +30,10 @@ os-header {
     margin-left: auto;
     margin-right: 30px;
 
+    .source-code {
+        white-space: nowrap;
+    }
+
     a {
         text-decoration: none;
     }
